[package]
name = "nbt_scanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
fastnbt = "1"
flate2 = "1"
fastanvil = "0.21"
rayon = "1"
walkdir = "2"